Changed Hero section: Video -> img

--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quo 
 button  = true
 btnText = "Know More"
 btnURL  = "https://themefisher.com/"
-videoThumb = "images/slider/video-player-thumb.jpg"
+videoThumb = "images/slider/grindel_cilindricos05.jpg"
 videoURL   = "https://www.youtube.com/embed/g3-VxLQO7do"
 
 # About 2 Section
@@ -120,12 +120,12 @@ footerSubscribeTitle = "Subscribe"
 # Hero Area Section
 [Languages.en.params.hero]
 enable  = true
-heading = "We love to make brands grow"
-description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. At quo dolor est incidunt suscipit minima, alias numquam voluptatum rerum porro. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore at laboriosam unde repellat id expedita quae quisquam libero officia consequatur."
+heading = "The reliable choice when it comes to machinery."
+description = "We work with industry leading partners, each one of them highly specialized and knowledgable in their respective discipline"
 button  = true
 btnText = "Know More"
 btnURL  = "https://themefisher.com/"
-videoThumb = "images/slider/video-player-thumb.jpg"
+videoThumb = "images/slider/grindel_cilindricos05.jpg"
 videoURL   = "https://www.youtube.com/embed/g3-VxLQO7do"
 
 # About 2 Section
