--- a/data/de/workingprocess.yml
+++ b/data/de/workingprocess.yml
@@ -1,7 +1,7 @@
 enable  : true
-topTitle: FRANCAIS HOW WE WORKS
-title   : FRANCAIS Our Work Process
-subtitle: FRANCAIS Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
+topTitle: GERMAN HOW WE WORKS
+title   : GERMAN Our Work Process
+subtitle: GERMAN Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
 item    :
   - number  : 1
     icon    : tf-ion-ios-briefcase-outline
