--- a/data/de/portfolio.yml
+++ b/data/de/portfolio.yml
@@ -1,7 +1,7 @@
 enable  : true
-topTitle: FRANCAIS RECENT WORK
-title   : FRANCAIS WORK SHOWCASE.
-subtitle: FRANCAIS Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
+topTitle: GERMAN RECENT WORK
+title   : GERMAN WORK SHOWCASE.
+subtitle: GERMAN Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
 
 filtermenu :
   - name      : Photography
