--- a/data/de/pricing.yml
+++ b/data/de/pricing.yml
@@ -1,10 +1,10 @@
 enable  : true
 topTitle: EASY PRICING
-title   : FRANCAIS Pricing.
+title   : GERMAN Pricing.
 subtitle : Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
 
 item  :
-  - name        : FRANCAIS BASIC
+  - name        : GERMAN BASIC
     price       : $99
     description : Perfect for single freelancers who work by themselves
     featurelist :
