--- a/data/de/about.yml
+++ b/data/de/about.yml
@@ -2,12 +2,13 @@ enable  : true
 item    :
   - positionRight : false
     image : images/about/about-1.jpg
-    title : GERMAN Creativity is in our blood
+    title : Tradition and Expertise
     description : >
-      GERMAN Curabitur felis nibh, imperdiet eu erat non, luctus cursus lectus. Donec maximus diam leo, sed fringilla nisl auctor eget. Donec dictum neque est, ac faucibus ex blandit a Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quo minima ab aperiam molestiae natus repellendus neque culpa iure, nemo veritatis explicabo facilis, officia, saepe! Et corrupti odit, non deserunt.
+      Our suppliers are all located in the north of Spain either in Catalunya or the Basque Country. They have a 500-year history of being proud of their workmanship and today they add flexibility and reliability to the formula. Without this formula they would have little chance of competing in the German market. 
+
 
   - positionRight : true
     image : images/about/about-2.jpg
-    title : GERMAN We think out of the Box
+    title : Industry Industry Industry
     description : >
-      GERMAN Curabitur felis nibh, imperdiet eu erat non, luctus cursus lectus. Donec maximus diam leo, sed fringilla nisl auctor eget. Donec dictum neque est, ac faucibus ex blandit a Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae quo minima ab aperiam molestiae natus repellendus neque culpa iure, nemo veritatis explicabo facilis, officia, saepe! Et corrupti odit, non deserunt.
+      We work in the industry and do high precision stuff
