added OZ picture

--- a/config.toml
+++ b/config.toml
@@ -63,8 +63,8 @@ btnURL  = "/de"
 carouselThumb1 = "images/slider/car_tedisa.jpg"
 carouselThumb2 = "images/slider/car_tdg.jpg"
 carouselThumb3 = "images/slider/car_grindel.jpg"
-carouselThumb4 = "images/slider/car_eisenor.jpg"
-carouselThumb5 = "..."
+carouselThumb4 = "images/slider/car_oz.jpg"
+carouselThumb5 = "images/slider/car_eisenor.jpg"
 carouselThumb6 = "..."
 carouselThumb7 = "..."
 
@@ -102,7 +102,7 @@ mapMarker   = "images/marker.png"
 # Call to Action Section on About Page
 [Languages.de.params.cta]
 enable  = true
-bg      = "images/-to-action/call-to-action-bg-2.jpg"
+bg      = "images/call-to-action/call-to-action-bg-2.jpg"
 title   = "Lasst uns zusammen Ideen verwirklichen"
 subtitle= "Proin gravida nibh vel velit auctor aliquet. Aenean sollicudin bibendum auctor, <br> nisi elit consequat ipsum, nesagittis sem nid elit. Duis sed odio sitain elit."
 btnText = "Kontakt"
@@ -136,8 +136,8 @@ btnURL  = "/en"
 carouselThumb1 = "images/slider/car_tedisa.jpg"
 carouselThumb2 = "images/slider/car_tdg.jpg"
 carouselThumb3 = "images/slider/car_grindel.jpg"
-carouselThumb4 = "images/slider/car_eisenor.jpg"
-carouselThumb5 = "..."
+carouselThumb4 = "images/slider/car_oz.jpg"
+carouselThumb5 = "images/slider/car_eisenor.jpg"
 carouselThumb6 = "..."
 carouselThumb7 = "..."
 
