new pictures in carousel

--- a/config.toml
+++ b/config.toml
@@ -65,7 +65,7 @@ carouselThumb2 = "images/slider/car_tdg.jpg"
 carouselThumb3 = "images/slider/car_grindel.jpg"
 carouselThumb4 = "images/slider/car_oz.jpg"
 carouselThumb5 = "images/slider/car_eisenor.jpg"
-carouselThumb6 = "..."
+carouselThumb6 = "images/slider/car_grindel2.jpg"
 carouselThumb7 = "..."
 
 # About 2 Section
@@ -138,7 +138,7 @@ carouselThumb2 = "images/slider/car_tdg.jpg"
 carouselThumb3 = "images/slider/car_grindel.jpg"
 carouselThumb4 = "images/slider/car_oz.jpg"
 carouselThumb5 = "images/slider/car_eisenor.jpg"
-carouselThumb6 = "..."
+carouselThumb6 = "images/slider/car_grindel2.jpg"
 carouselThumb7 = "..."
 
 # About 2 Section
