--- a/data/de/clients.yml
+++ b/data/de/clients.yml
@@ -1,25 +1,24 @@
 enable    : true
 title     : Wir kümmern uns um ihr Anliegen
 description: >
-  Das Mac Precision Team unterstützt ihr Unternehmen mit:
+  Das Mac Precision Team unterstützt ihr Unternehmen bei:
 image     : images/about/about-1.jpg
 servicelist:
-  - name    : Auswahl einer geeigneten Lösung für ihre Anforderungen
-  - name    : Enticklung effizienterer Einheiten
+  - name    : Problemösung
+  - name    : Enticklung effektiver Produkte
   - name    : Reduktion der Betriebslautstärke
-  - name    : Verkürzung der Lieferzeiten
-  - name    : Verlängerte Lebensdauer der Komponenten
-  - name    : Unterstützung bei Prototypisierung
-  - name    : Schnelle und zuverlässige Antworten
+  - name    : Durchsetzung besserer Lieferzeiten
+  - name    : Längerer Lebensdauer der Produkte
+  - name    : Bezug von Prototypen
+  - name    : Schneller und zuverlässiger Kommunikation
 
 clientLogo:
-  - image   : images/client-logo/logo1.png
-  - image   : images/client-logo/logo-2.png
-  - image   : images/client-logo/logo-3.png
-  - image   : images/client-logo/logo-4.png
-  - image   : images/client-logo/logo-5.png
-  - image   : images/client-logo/logo1.png
-  - image   : images/client-logo/logo-2.png
-  - image   : images/client-logo/logo-3.png
-  - image   : images/client-logo/logo-4.png
-  - image   : images/client-logo/logo-5.png
+  - image   : images/client-logo/logo_eisenor.png
+  - image   : images/client-logo/logo_shuton.png
+  - image   : images/client-logo/logo_tedisa.png
+  - image   : images/client-logo/logo_spirsin.png
+  - image   : images/client-logo/logo_spiroide.png
+  - image   : images/client-logo/logo_grindel.png
+  - image   : images/client-logo/logo_diviprec.png
+  - image   : images/client-logo/logo_oz.png
+
