--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ carouselThumb3 = "images/slider/car_grindel.jpg"
 carouselThumb4 = "images/slider/car_oz.jpg"
 carouselThumb5 = "images/slider/car_eisenor.jpg"
 carouselThumb6 = "images/slider/car_grindel2.jpg"
-carouselThumb7 = "..."
+carouselThumb7 = "images/slider/car_obeki.jpg"
 
 # About 2 Section
 [Languages.de.params.aboutSm]
@@ -139,7 +139,7 @@ carouselThumb3 = "images/slider/car_grindel.jpg"
 carouselThumb4 = "images/slider/car_oz.jpg"
 carouselThumb5 = "images/slider/car_eisenor.jpg"
 carouselThumb6 = "images/slider/car_grindel2.jpg"
-carouselThumb7 = "..."
+carouselThumb7 = "images/slider/car_obeki.jpg"
 
 # About 2 Section
 [Languages.en.params.aboutSm]
