--- a/data/de/portfolio.yml
+++ b/data/de/portfolio.yml
@@ -1,7 +1,7 @@
 enable  : true
-topTitle: GERMAN RECENT WORK
-title   : GERMAN WORK SHOWCASE.
-subtitle: GERMAN Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!
+topTitle: NICHTS LÄUFT OHNE 
+title   : UNSERE PARTNERUNTERNEHMEN.
+subtitle: Zuverlässige Lieferanten auf die Sie zählen können
 
 filtermenu :
   - name      : Photography
