--- a/data/de/service.yml
+++ b/data/de/service.yml
@@ -1,6 +1,6 @@
 enable    : true
-topTitle  : ÜBERZEUGEN SIE SICH VON
-title     : UNSEREN DIENSTLEISTNGEN.
+topTitle  : WIR STECHEN HERVOR DURCH
+title     : UNSERE DIENSTLEISTNGEN
 subtitle  : Wir streben nach der perfekten Lösungsfindung für ihre Anforderungen
 item      :
   - icon  : tf-ion-ios-copy-outline
