spiroide carousel pic added

--- a/config.toml
+++ b/config.toml
@@ -67,7 +67,7 @@ carouselThumb4 = "images/slider/car_oz.jpg"
 carouselThumb5 = "images/slider/car_eisenor.jpg"
 carouselThumb6 = "images/slider/car_grindel2.jpg"
 carouselThumb7 = "images/slider/car_obeki.jpg"
-carouselThumb8 = "..."
+carouselThumb8 = "images/slider/car_spiroide.jpg"
 carouselTitle1 = "images/slider/title_tedisa.png"
 carouselTitle2 = "images/slider/title_tdg.png"
 carouselTitle3 = "images/slider/title_grindel.png"
@@ -149,7 +149,7 @@ carouselThumb4 = "images/slider/car_oz.jpg"
 carouselThumb5 = "images/slider/car_eisenor.jpg"
 carouselThumb6 = "images/slider/car_grindel2.jpg"
 carouselThumb7 = "images/slider/car_obeki.jpg"
-carouselThumb8 = "..."
+carouselThumb8 = "images/slider/car_spiroide.jpg"
 carouselTitle1 = "images/slider/title_tedisa.png"
 carouselTitle2 = "images/slider/title_tdg.png"
 carouselTitle3 = "images/slider/title_grindel.png"
