--- a/data/de/service.yml
+++ b/data/de/service.yml
@@ -1,6 +1,6 @@
 enable    : true
-topTitle  : WIR STECHEN HERVOR DURCH
-title     : UNSERE DIENSTLEISTNGEN
+topTitle  : VORGESTELLT
+title     : UNSERE DIENSTLEISTUNGEN
 subtitle  : Wir streben nach der perfekten Lösungsfindung für ihre Anforderungen
 item      :
   - icon  : tf-ion-ios-copy-outline
