--- a/config.toml
+++ b/config.toml
@@ -178,8 +178,9 @@ enable  = true
 topTitle= "DROP US A NOTE"
 title   = "Contact Us."
 subtitle= "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum reiciendis quasi itaque, obcaecati atque sit!"
-address = "14/05, Stockhome <br> Victori Palace , Deutschland"
-phone   = "(03) 9283 2617"
+address = "Postfach 240229<br> 68172 Mannheim"
+phone   = "+49 (0) 621 437 56 22"
+phone2  = "+49 (0) 176 966 183 30"
 fax     = "+61 3827 3590"
 facebook= "https://www.facebook.com/"
 twitter = "https://twitter.com/"
