tedisa and eisenor product page

--- a/config.toml
+++ b/config.toml
@@ -98,6 +98,8 @@ title   = "Kontaktiere uns"
 subtitle= "Wir helfen Ihnen gerne bei allen möglichen Fragen."
 address = "Postfach 240229<br> 68172 Mannheim"
 phone   = "+49 (0) 621 437 56 22"
+phone2  = "+49 (0) 176 966 183 30"
+
 fax     = "+49 (0) 621 437 56 22"
 facebook= "https://www.facebook.com/"
 twitter = "https://twitter.com/"
