--- a/data/en/partner_tedisa.yml
+++ b/data/en/partner_tedisa.yml
@@ -1,14 +1,14 @@
 enable  : true
-topTitle: NICHTS LÄUFT OHNE 
-title   : UNSERE PARTNERUNTERNEHMEN.
-subtitle: Zuverlässige Lieferanten auf die Sie zählen können
+topTitle: INTRODUCING
+title   : OUR PARTNERS.
+subtitle: Reliable suppliers for almost every use case.
 url: http://www.tedisa-hirth.com/
-location: Anschrift
-description: Tedisa fertigt Hirth Ringe und Hirth Verzahnungen. Spezialist für hochpräzise Produkte. Ringdurchmesser bis 1500 mm sind möglich. Standardgrößen und Ringsätze nach Kundenwunsch in höchster Präzision.
+location: Address
+description: Tedisa produces Hirth rings and Hirth teeth according to customer requirements. The specialist providing a high-quality product. They can make parts up to 1500 mm in diameter. Standard sizes are available for quick delivery and custom production is their norm with highest precision.
 address: Pol. Ind. Eitua, 56 
 address2: E48240 Berriz
 city: Bizkaia, Spain
-phone: Telefon
+phone: Phone
 number1: +34 946 824 853
 number2: +34 946 225 144
 contact: tedisa@tedisa-hirth.com
