fixed scroll wheel issue

--- a/data/de/partner_tdg.yml
+++ b/data/de/partner_tdg.yml
@@ -24,9 +24,9 @@ item   :
 
   - title : 
     image : images/portfolio/portfolio-tdg2.jpg
-    category  : ios, design
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-tdg3.jpg
-    category  : photography, development
+    category  : 
 
