--- a/data/de/partner_oz.yml
+++ b/data/de/partner_oz.yml
@@ -24,14 +24,14 @@ item   :
 
   - title : 
     image : images/portfolio/portfolio-oz2.jpg
-    category  : ios, design
+    category  :
 
   - title : 
     image : images/portfolio/portfolio-oz3.jpg
     category  : photography, develoz
   - title : 
     image : images/portfolio/portfolio-oz4.jpg
-    category  : ios
+    category  :
 
   - title :  
     image : images/portfolio/portfolio-oz5.jpg
@@ -44,24 +44,24 @@ item   :
 item2   :
   - title :  
     image : images/portfolio/portfolio-oz7.jpg
-    category  : photography
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-oz8.jpg
-    category  : ios, design
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-oz9.jpg
-    category  : photography, development
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-oz10.jpg
-    category  : photography, development
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-oz11.jpg
-    category  : photography, development
+    category  : 
 
   - title : 
     image : images/portfolio/portfolio-oz12.jpg
-    category  : photography, development
+    category  : 
