--- a/data/de/partner_tdg.yml
+++ b/data/de/partner_tdg.yml
@@ -30,3 +30,15 @@ item   :
     image : images/portfolio/portfolio-tdg3.jpg
     category  : 
 
+  - title : 
+    image : images/portfolio/portfolio-tdg4.jpg
+    category  : 
+
+  - title : 
+    image : images/portfolio/portfolio-tdg5.jpg
+    category  : 
+
+  - title : 
+    image : images/portfolio/portfolio-tdg6.jpg
+    category  : 
+
